--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "process-data": "node -r dotenv/config processing/process.js"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
@@ -20,8 +21,10 @@
     "@tailwindcss/forms": "^0.5.4",
     "@visheratin/web-ai": "^1.3.0",
     "chromadb": "^1.5.6",
+    "dotenv": "^16.3.1",
+    "gray-matter": "^4.0.3",
     "jsdom": "^22.1.0",
-    "langchain": "^0.0.127",
+    "langchain": "^0.0.187",
     "libxmljs2": "^0.32.0",
     "markdown-it": "^13.0.1",
     "node-fetch": "^3.3.2",
