--- a/package.json
+++ b/package.json
@@ -16,18 +16,21 @@
     "nuxt": "^3.6.5"
   },
   "dependencies": {
+    "@langchain/community": "^0.0.29",
+    "@langchain/core": "^0.1.29",
+    "@langchain/openai": "^0.0.14",
     "@mozilla/readability": "^0.4.4",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@tailwindcss/forms": "^0.5.4",
-    "@visheratin/web-ai": "^1.3.0",
+    "@visheratin/web-ai": "^1.4.5",
     "chromadb": "^1.5.6",
     "dotenv": "^16.3.1",
     "gray-matter": "^4.0.3",
     "jsdom": "^22.1.0",
-    "langchain": "^0.0.187",
-    "libxmljs2": "^0.32.0",
+    "langchain": "^0.1.19",
     "markdown-it": "^13.0.1",
     "node-fetch": "^3.3.2",
-    "openai": "^3.3.0"
+    "openai": "^3.3.0",
+    "zod": "^3.22.4"
   }
 }
